fixed images overflow in chrome

--- a/css/main.css
+++ b/css/main.css
@@ -213,6 +213,7 @@ html {
   width: 100%;
   aspect-ratio: 1/1;
   object-fit: cover;
+  display: block;
 }
 .main .section-1-learnmore::before {
   background-color: hsl(51deg, 100%, 49%);
@@ -234,6 +235,7 @@ html {
   width: 100%;
   aspect-ratio: 1/1;
   object-fit: cover;
+  display: block;
 }
 .main .section-2-learnmore::before {
   background-color: hsl(7deg, 99%, 70%);
@@ -292,6 +294,7 @@ html {
   width: 7.2rem;
   height: 7.2rem;
   border-radius: 50%;
+  display: block;
 }
 .main .section-4-thomas {
   display: flex;
@@ -304,6 +307,7 @@ html {
   width: 7.2rem;
   height: 7.2rem;
   border-radius: 50%;
+  display: block;
 }
 .main .section-4-jennie {
   display: flex;
@@ -316,6 +320,7 @@ html {
   width: 7.2rem;
   height: 7.2rem;
   border-radius: 50%;
+  display: block;
 }
 .main .section-4-infos > *:not(:last-child) {
   margin-bottom: 1rem;
@@ -338,6 +343,7 @@ html {
 .footer-img {
   width: 100%;
   object-fit: contain;
+  display: block;
 }
 .footer-social-media {
   display: flex;
@@ -397,7 +403,10 @@ html {
   }
 
   .footer-gallery {
-    flex-wrap: wrap;
+    flex-flow: row wrap;
+  }
+  .footer-gallery div {
+    width: 100%;
   }
   .footer-img {
     width: 100%;
