--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -77,6 +77,7 @@
         width: 100%;
         aspect-ratio: 1/1;
         object-fit: cover;
+        display: block;
       }
     }
 
@@ -103,6 +104,7 @@
         width: 100%;
         aspect-ratio: 1/1;
         object-fit: cover;
+        display: block;
       }
     }
 
@@ -169,6 +171,7 @@
         width: 7.2rem;
         height: 7.2rem;
         border-radius: 50%;
+        display: block;
       }
     }
 
@@ -182,6 +185,7 @@
         width: 7.2rem;
         height: 7.2rem;
         border-radius: 50%;
+        display: block;
       }
     }
 
@@ -195,6 +199,7 @@
         width: 7.2rem;
         height: 7.2rem;
         border-radius: 50%;
+        display: block;
       }
     }
     &-infos {
@@ -224,6 +229,7 @@
   &-img {
     width: 100%;
     object-fit: contain;
+    display: block;
   }
 
   &-social-media {
@@ -297,10 +303,14 @@
   }
   .footer {
     &-gallery {
-      flex-wrap: wrap;
+      flex-flow: row wrap;
+      div {
+        width: 100%;
+      }
     }
     &-img {
       width: 100%;
+      // object-fit: 1/1;
     }
   }
 }
